added images for webpage + editing homepage

--- a/Website Code/homepage.html
+++ b/Website Code/homepage.html
@@ -10,6 +10,39 @@
 
     </head>
     <body>
+        <div class="homepage">
+            <div class="homepage-child">
+            </div>
+            <div class="homepage-item">
+            </div>
+            <div class="homepage-inner">
+            </div>
+            <div class="rectangle-div" id="rectangle">
+            </div>
+            <div class="homepage-child1">
+            </div>
+            <div class="homepage-child2">
+            </div>
+            <h1 class="neuroneko">NeuroNeko</h1>
+            <h2 class="welcome-to-neuroneko">Welcome to NeuroNeko!</h2>
+            <h2 class="choose-a-game">Choose a game!</h2>
+            <h2 class="cognitive-test">Cognitive Test</h2>
+            <h3 class="meowmory">Meowmory</h3>
+            <h3 class="find-the-treat">Find the treat</h3>
+            <h3 class="catch-the-laster">Catch the laser</h3>
+            <p class="intro">Here, you can purrfect your cognitive skills with different games!</p>
+            <div class="you-can-take-container">
+                <p class="explanation">You can take a cognitive test to assess your memory, processing speed, and spatial awareness for more personalized results.</p>
+                <p class="explanation2">&nbsp;</p>
+            </div>
+            <div class="homepage-child3">
+            </div>
+            <div class="homepage-child4">
+            </div>
+            <img class="line-icon" alt="" src="Line 1.svg">
+            <img class="homepage-child5" alt="" src="Line 2.svg">
+            <img class="paw-icon" alt="" src="paw.png"
+        </div>
         
     </body>
 </html>
