added code to homepage + css files

--- a/Website Code/homepage.html
+++ b/Website Code/homepage.html
@@ -29,11 +29,15 @@
             <h2 class="cognitive-test">Cognitive Test</h2>
             <h3 class="meowmory">Meowmory</h3>
             <h3 class="find-the-treat">Find the treat</h3>
-            <h3 class="catch-the-laster">Catch the laser</h3>
+            <h3 class="catch-the-laser">Catch the laser</h3>
             <p class="intro">Here, you can purrfect your cognitive skills with different games!</p>
             <div class="you-can-take-container">
                 <p class="explanation">You can take a cognitive test to assess your memory, processing speed, and spatial awareness for more personalized results.</p>
                 <p class="explanation2">&nbsp;</p>
+            </div>
+            <div class="you-can-also-container">
+                <p class="explanation3">You can also start playing the games to improve your skills right away.</p>
+                <p class="explanation4">&nbsp;</p>
             </div>
             <div class="homepage-child3">
             </div>
@@ -41,8 +45,50 @@
             </div>
             <img class="line-icon" alt="" src="Line 1.svg">
             <img class="homepage-child5" alt="" src="Line 2.svg">
-            <img class="paw-icon" alt="" src="paw.png"
+            <img class="paw-icon" alt="" src="paw.png">
+            <img class="mind-icon" alt="" src="mind.png">
+            <div class="homepage-child6" id="rectangle5"></div>
+            <div class="homepage-child7" id="rectangle6"></div>
+            <div class="homepage-child8" id="rectangle7"></div>
+            <div class="homepage-child9" id="rectangle8"></div>
+            </div>
         </div>
-        
+
+        <script>
+            var rectangle = document.getElementById("rectangle");
+            if(rectangle) {
+                rectangle.addEventListener("click", function (e) {
+
+                });
+            }
+
+            var rectangle5 = document.getElementById("rectangle5");
+            if(rectangle5) {
+                rectangle5.addEventListener("click", function (e) {
+
+                });
+            }
+
+            var rectangle6 = document.getElementById("rectangle6");
+            if(rectangle6) {
+                rectangle6.addEventListener("click", function (e) {
+
+                });
+            }
+
+            var rectangle7 = document.getElementById("rectangle7");
+            if(rectangle7) {
+                rectangle7.addEventListener("click", function (e) {
+
+                });
+            }
+
+            var rectangle8 = document.getElementById("rectangle8");
+            if(rectangle8) {
+                rectangle8.addEventListener("click", function (e) {
+
+                });
+            }
+        </script>
     </body>
 </html>
