--- a/Game Code/MemoryGame/colorful-cats.html
+++ b/Game Code/MemoryGame/colorful-cats.html
@@ -4,28 +4,40 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colorful Cats: Memory Meow</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="loading-screen" id="loadingScreen">
-        <h1>Welcome to Colorful Cats: Memory Meow!</h1>
-        <div class="cat-explainer">
-            <p>Hello! I’m Mr. Whiskers, and I’m here to guide you!</p>
-            <p>Memorize the color of the cats and answer correctly to keep playing. Let's see how far you can go!</p>
-        </div>
-        <button onclick="startGame()">Play Game</button>
+    <!-- Welcome Screen -->
+    <div id="welcome-screen">
+        <h1>Welcome to Colorful Cats: Memory Meow</h1>
+        <p>Hi there, I'm Meowster, your guide! Remember the cats and their colors to advance to the next level.</p>
+        <button onclick="startGame()">Start Game</button>
     </div>
 
-    <div class="game-screen" id="gameScreen" style="display: none;">
-        <h2>Level <span id="level">1</span></h2>
-        <div id="catsContainer"></div>
-        <button id="submitAnswer" onclick="submitAnswer()">Submit Answer</button>
-        <div id="result"></div>
-        <div id="healthBar">
-            <p>Health: <span id="health">100</span>%</p>
-        </div>
+    <!-- Game Area -->
+    <div id="game-area" style="display:none;">
+        <h2>Level <span id="level"></span></h2>
+        <div id="cat-container"></div>
+        <p>What was the color of the cat?</p>
+        <input type="text" id="cat-answer" placeholder="Enter color">
+        <button onclick="checkAnswer()">Submit</button>
     </div>
 
-    <script src="game.js"></script>
+    <!-- Result Screens -->
+    <div id="success-screen" style="display:none;">
+        <h2>Correct! 🎉</h2>
+        <p>A happy cat thanks you!</p>
+        <img src="happy-cat.png" alt="Happy Cat">
+        <button onclick="nextLevel()">Next Level</button>
+    </div>
+
+    <div id="fail-screen" style="display:none;">
+        <h2>Oops! 😿</h2>
+        <p>That wasn't right, try again!</p>
+        <img src="sad-cat.png" alt="Sad Cat">
+        <button onclick="restartGame()">Try Again</button>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
