--- a/Game Code/MemoryGame/colorful-cats.html
+++ b/Game Code/MemoryGame/colorful-cats.html
@@ -21,6 +21,9 @@
         <p>What was the color of the cat?</p>
         <input type="text" id="cat-answer" placeholder="Enter color">
         <button onclick="checkAnswer()">Submit</button>
+        <div id="health-bar">
+            <span id="health-indicator" style="width:100%; background-color:green; display:block; height:20px;"></span>
+        </div>        
     </div>
 
     <!-- Result Screens -->
